Check the projected total to avoid blowing past the opcodes limits
Signed-off-by: sdimitrov9 <stoyan.dimitrov@limechain.tech>