@@ -51,7 +51,7 @@ final class OpcodeContextTest {
 
     @Test
     void truncatesWhenCumulativeMemoryBudgetReached() {
-        // maxMemoryWords=10; each opcode captures 4 memory words, so the 4th offered opcode is dropped
+        // maxMemoryWords=10; each opcode captures 4 words, so the 3rd would reach 12 and is dropped before recording
         final var properties = new OpcodesProperties();
         properties.setMaxMemoryWords(10);
         final var context = new OpcodeContext(request(), 0, properties);
@@ -61,9 +61,10 @@ final class OpcodeContextTest {
         }
 
         final var opcodes = context.getOpcodes();
-        assertThat(opcodes).hasSize(4); // 3 recorded + single truncation marker
+        assertThat(opcodes).hasSize(3); // 2 recorded + single truncation marker
         assertThat(opcodes.getLast().getOp()).isEqualTo(OpcodeContext.TRUNCATED_OP);
-        assertThat(context.getCapturedMemoryWords()).isEqualTo(12L);
+        // Never overshoots the budget: stays at 8, not 12
+        assertThat(context.getCapturedMemoryWords()).isEqualTo(8L);
         assertThat(context.isTruncated()).isTrue();
         assertThat(context.getExecutedOpcodes()).isEqualTo(5L);
     }
@@ -78,8 +79,8 @@ final class OpcodeContextTest {
             context.addOpcodes(opcode(0, 4, 0));
         }
 
-        assertThat(context.getOpcodes()).hasSize(4);
-        assertThat(context.getCapturedStack()).isEqualTo(12L);
+        assertThat(context.getOpcodes()).hasSize(3);
+        assertThat(context.getCapturedStack()).isEqualTo(8L);
         assertThat(context.isTruncated()).isTrue();
     }
 
@@ -93,28 +94,45 @@ final class OpcodeContextTest {
             context.addOpcodes(opcode(0, 0, 4));
         }
 
-        assertThat(context.getOpcodes()).hasSize(4);
-        assertThat(context.getCapturedStorage()).isEqualTo(12L);
+        assertThat(context.getOpcodes()).hasSize(3);
+        assertThat(context.getCapturedStorage()).isEqualTo(8L);
         assertThat(context.isTruncated()).isTrue();
     }
 
     @Test
-    void addOpcodesRetainsAllOpcodesBelowTheConfiguredCap() {
+    void doesNotOvershootBudgetWhenSingleOpcodeWouldExceedIt() {
+        final var properties = new OpcodesProperties();
+        properties.setMaxMemoryWords(10);
+        final var context = new OpcodeContext(request(), 0, properties);
+
+        context.addOpcodes(opcode(4, 0, 0)); // fits: 4 <= 10
+        context.addOpcodes(opcode(1000, 0, 0)); // would reach 1004, dropped before recording rather than overshooting
+
+        assertThat(context.getCapturedMemoryWords()).isEqualTo(4L);
+        final var opcodes = context.getOpcodes();
+        assertThat(opcodes).hasSize(2); // the fitting opcode + truncation marker
+        assertThat(opcodes.getLast().getOp()).isEqualTo(OpcodeContext.TRUNCATED_OP);
+        assertThat(context.isTruncated()).isTrue();
+    }
+
+    @Test
+    void addOpcodesRetainsAllOpcodesUpToTheReservedCap() {
         final int maxOpcodes = 5;
         final var context = new OpcodeContext(request(), 0, propertiesWithMaxOpcodes(maxOpcodes));
         final var opcode = new Opcode();
 
-        for (int i = 0; i < maxOpcodes; i++) {
+        // One slot is reserved for a potential truncation marker, so up to maxOpcodes - 1 real opcodes are retained
+        for (int i = 0; i < maxOpcodes - 1; i++) {
             context.addOpcodes(opcode);
         }
 
         assertThat(context.getOpcodes())
-                .hasSize(maxOpcodes)
+                .hasSize(maxOpcodes - 1)
                 .noneMatch(o -> OpcodeContext.TRUNCATED_OP.equals(o.getOp()));
-        // Exactly at the cap: the next opcode would be dropped, but nothing has been truncated yet
+        // The reserved slot means we report at capacity once maxOpcodes - 1 opcodes are recorded, nothing truncated yet
         assertThat(context.isAtCapacity()).isTrue();
         assertThat(context.isTruncated()).isFalse();
-        assertThat(context.getExecutedOpcodes()).isEqualTo(maxOpcodes);
+        assertThat(context.getExecutedOpcodes()).isEqualTo(maxOpcodes - 1L);
     }
 
     @Test
@@ -132,8 +150,9 @@ final class OpcodeContextTest {
         context.addOpcodes(null);
 
         final var opcodes = context.getOpcodes();
-        assertThat(opcodes).hasSize(maxOpcodes + 1); // cap + single marker
-        assertThat(opcodes.get(opcodes.size() - 1).getOp()).isEqualTo(OpcodeContext.TRUNCATED_OP);
+        // Opcode-count budget is binding: the marker fills the reserved slot, so the list stays at maxOpcodes
+        assertThat(opcodes).hasSize(maxOpcodes);
+        assertThat(opcodes.getLast().getOp()).isEqualTo(OpcodeContext.TRUNCATED_OP);
         assertThat(context.isTruncated()).isTrue();
         assertThat(context.getExecutedOpcodes()).isEqualTo(maxOpcodes + 2L);
     }
@@ -149,15 +168,19 @@ final class OpcodeContextTest {
         }
 
         final var opcodes = context.getOpcodes();
-        // The configured cap plus exactly one truncation marker
-        assertThat(opcodes).hasSize(maxOpcodes + 1);
+        // The returned list never exceeds maxOpcodes: one slot is reserved for the marker
+        assertThat(opcodes).hasSize(maxOpcodes);
 
-        final var marker = opcodes.get(opcodes.size() - 1);
+        final var marker = opcodes.getLast();
         assertThat(marker.getOp()).isEqualTo(OpcodeContext.TRUNCATED_OP);
         assertThat(marker.getReason()).contains("truncated");
         assertThat(marker.getMemory()).isEmpty();
         assertThat(marker.getStack()).isEmpty();
         assertThat(marker.getStorage()).isEmpty();
+        // Only one marker is present
+        assertThat(opcodes)
+                .filteredOn(o -> OpcodeContext.TRUNCATED_OP.equals(o.getOp()))
+                .hasSize(1);
 
         // Dropped opcodes are still counted so the caller can report how much was omitted
         assertThat(context.isTruncated()).isTrue();
